==============
lxml changelog
==============

3.3.1 (2014-02-12)
==================

Features added
--------------

Bugs fixed
----------

* LP#1014290: HTML documents parsed with ``parser.feed()`` failed to find
  elements during tag iteration.

* LP#1273709: Building in PyPy failed due to missing support for
  ``PyUnicode_Compare()`` and ``PyByteArray_*()`` in PyPy's C-API.

* LP#1274413: Compilation in MSVC failed due to missing "stdint.h" standard
  header file.

* LP#1274118: iterparse() failed to parse BOM prefixed files.

Other changes
-------------


3.3.0 (2014-01-26)
==================

Features added
--------------

Bugs fixed
----------

* The heuristic that distinguishes file paths from URLs was tightened
  to produce less false negatives.

Other changes
-------------


3.3.0beta5 (2014-01-18)
=======================

Features added
--------------

* The PEP 393 unicode parsing support gained a fallback for wchar strings
  which might still be somewhat common on Windows systems.

Bugs fixed
----------

* Several error handling problems were fixed throughout the code base that
  could previously lead to exceptions being silently swallowed or not
  properly reported.

* The C-API function ``appendChild()`` is now deprecated as it does not
  propagate exceptions (its return type is ``void``).  The new function
  ``appendChildToElement()`` was added as a safe replacement.

* Passing a string into ``fromstringlist()`` raises an exception instead of
  parsing the string character by character.

Other changes
-------------

* Document cleanup code was simplified using the new GC features in
  Cython 0.20.


3.3.0beta4 (2014-01-12)
=======================

Features added
--------------

Bugs fixed
----------

* The (empty) value returned by the ``attrib`` property of Entity and Comment
  objects was mutable.

* Element class lookup wasn't available for the new pull parsers or when using
  a custom parser target.
